--- a/gb/20/10/23/n12497028.md
+++ b/gb/20/10/23/n12497028.md
@@ -1,12 +1,12 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/mdeswy3230/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/mdeswy3230/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/mdeswy3230/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/mdeswy3230/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/mdeswy3230/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/mdeswy3230/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/mdeswy3230/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/mdeswy3230/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/mdeswy3230/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/mdeswy3230/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/mdeswy3230/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/mdeswy3230/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/mdeswy3230/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/mdeswy3230/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/mdeswy3230/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/mdeswy3230/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/mdeswy3230/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/mdeswy3230/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/mdeswy3230/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/mdeswy3230/www/master/t/djy/12a.jpg" title="头条"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/mdeswy3230/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/mdeswy3230/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/mdeswy3230/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/mdeswy3230/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/mdeswy3230/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/mdeswy3230/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/mdeswy3230/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/mdeswy3230/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/mdeswy3230/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/mdeswy3230/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/mdeswy3230/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/mdeswy3230/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/mdeswy3230/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/mdeswy3230/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/mdeswy3230/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/mdeswy3230/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/mdeswy3230/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/mdeswy3230/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/mdeswy3230/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/mdeswy3230/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/mdeswy3230/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/mdeswy3230/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/mdeswy3230/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/mdeswy3230/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/mdeswy3230/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/mdeswy3230/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/mdeswy3230/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/eizauy3553/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>联电有望遭美司法部轻判 外资看好</h2>
 
 <h6></h6>
 <hr>
-<p>【大纪元2020年10月23日讯】（大纪元记者吴美莲台湾综合报导）<ahref="https://github.com/mdeswy3230/djy/blob/master/gb/tag/%E8%81%94%E7%94%B5.md#1">联电</a>日前遭美方司法部指控协助中国福建晋华窃取美光（Micron）的生产技术，联电22日发出公告，指出官司将尘埃落定，市场估计可望只被轻罚。美系外资认为，联电将付出的解决金额低于预期，重申加码评等与目标价36元；亚系外资维持买进评等与目标价38元。</p>
-<p><ahref="https://github.com/mdeswy3230/djy/blob/master/gb/tag/%E8%81%94%E7%94%B5.md#1">联电</a>在2016年与中国的福建晋华集成电路（ JHICC）签订技术合作协定，而2018年11月30日美国政府指控 JHICC 疑似侵权，而联电也遭指控协助窃取技术，该起事件使市场对于联电抱有疑虑。</p>
+<p>【大纪元2020年10月23日讯】（大纪元记者吴美莲台湾综合报导）<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E8%81%94%E7%94%B5.md#1">联电</a>日前遭美方司法部指控协助中国福建晋华窃取美光（Micron）的生产技术，联电22日发出公告，指出官司将尘埃落定，市场估计可望只被轻罚。美系外资认为，联电将付出的解决金额低于预期，重申加码评等与目标价36元；亚系外资维持买进评等与目标价38元。</p>
+<p><ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E8%81%94%E7%94%B5.md#1">联电</a>在2016年与中国的福建晋华集成电路（ JHICC）签订技术合作协定，而2018年11月30日美国政府指控 JHICC 疑似侵权，而联电也遭指控协助窃取技术，该起事件使市场对于联电抱有疑虑。</p>
 <p>不过，联电22日表示，持续与美国司法部商讨可能的解决方案，期望在最短的时间内达成结论，合理预期的可能解决金额为以 6000 万美元和解，但结果仍待法院核准。若和解金如联电预期，代表联电仅遭到美国司法部轻判。</p>
 <p>美系外资发布研究报告表示，虽然晶圆代工产业基本面正在改善，但联电官司一直是营运疑虑之一，如今官司即将底定，看好联电股价将走扬，且6000万美元的解决金额也远低于外资原本估算的10亿美元。考量晶圆代工价格有机会调涨，重申联电“加码”评等与目标价36元。</p>
 <p>亚系外资指出，联电官司一直是潜在财务负担，从过去半导体产业侵权官司的平均解决金额来看，联电原本可能需支付5亿美元，然而实际金额却大幅降低到6000万美元，考量联电自由现金流约10亿至13亿美元，官司支出对获利的影响相当小，维持联电“买进”评等与目标价38元。</p>
@@ -16,48 +16,47 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/mdeswy3230/djy/blob/master/gb/18/11/3/n10828185.md#1">美控联电窃密 专家：与美中贸易战有关</a></li>
-<li><a href="https://github.com/mdeswy3230/djy/blob/master/gb/18/11/5/n10830945.md#1">联电窃密案 经长：提醒科技业做好管理</a></li>
-<li><a href="https://github.com/mdeswy3230/djy/blob/master/gb/18/11/5/n10831212.md#1">联电股价跌停 创近3年新低</a></li>
-<li><a href="https://github.com/mdeswy3230/djy/blob/master/gb/18/11/5/n10831918.md#1">美控晋华联电窃密 专家：削弱中国制造2025</a></li>
-<li><a href="https://github.com/mdeswy3230/djy/blob/master/gb/19/1/4/n10953969.md#1">消息：继美制裁晋华后 台联电调整内部人事</a></li>
-<li><a href="https://github.com/mdeswy3230/djy/blob/master/gb/19/9/30/n11556083.md#1">新竹县市台风假不同 联电休假台积电正常上班</a></li>
-<li><a href="https://github.com/mdeswy3230/djy/blob/master/gb/19/12/4/n11699835.md#1">晶圆代工供不应求 联电世界先进股价创波段新高</a></li>
-<li><a href="https://github.com/mdeswy3230/djy/blob/master/gb/20/3/30/n11987749.md#1">群联电子公司“五期厂房” 新建大楼开工动土</a></li>
-<li><a href="https://github.com/mdeswy3230/djy/blob/master/gb/20/10/5/n12454516.md#1">中芯证实受制裁 联电股价创新高</a></li>
-<li><a href="https://github.com/mdeswy3230/djy/blob/master/gb/20/10/7/n12459599.md#1">外资看好 台积电联电股价领涨</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/11/3/n10828185.md#1">美控联电窃密 专家：与美中贸易战有关</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/11/5/n10830945.md#1">联电窃密案 经长：提醒科技业做好管理</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/11/5/n10831212.md#1">联电股价跌停 创近3年新低</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/11/5/n10831918.md#1">美控晋华联电窃密 专家：削弱中国制造2025</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/1/4/n10953969.md#1">消息：继美制裁晋华后 台联电调整内部人事</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/9/30/n11556083.md#1">新竹县市台风假不同 联电休假台积电正常上班</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/12/4/n11699835.md#1">晶圆代工供不应求 联电世界先进股价创波段新高</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/30/n11987749.md#1">群联电子公司“五期厂房” 新建大楼开工动土</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/10/5/n12454516.md#1">中芯证实受制裁 联电股价创新高</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/10/7/n12459599.md#1">外资看好 台积电联电股价领涨</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/1/10/n10045304.md#1" target="_blank">《苦菜花》人物原型的真实人生（4）</a></li><li><a href="https://github.com/mdeswy3230/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank">藏字石 蕴天机</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/12/8/9/n3655381.md#1" target="_blank">揭秘：中共诬陷法轮功是这样编出来的</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank">揭开活摘器官黑幕</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/7/18/n10571152.md#1" target="_blank">凌晓辉：毒害人类灵魂的共产主义理论（下）</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/10/11/n11583320.md#1" target="_blank">“法轮大法像尘世中的钻石 无比珍贵”</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/mdeswy3230/djy/blob/master/gb/20/2/14/n11869946.md#1">大疫下解救有道 历史启示带您闯过中共肺炎</a></li>
-<li><a href="https://github.com/mdeswy3230/djy/blob/master/gb/20/9/17/n12411954.md#1">东西方地狱见闻 邪淫者的悲声</a></li>
-<li><a href="https://github.com/mdeswy3230/djy/blob/master/gb/20/10/14/n12475763.md#1">轮回转生名案：4岁娃难忘前生情 丈夫儿子来相认</a></li>
-<li><a href="https://github.com/mdeswy3230/djy/blob/master/gb/20/9/30/n12440579.md#1">《圣经》与《推背图》预言的应验与变换2</a></li>
-<li><a href="https://github.com/mdeswy3230/djy/blob/master/gb/20/10/14/n12475632.md#1">吕洞宾说因果：拒色戒淫 上天感应降福报</a></li>
-<li><a href="https://github.com/mdeswy3230/djy/blob/master/gb/20/10/22/n12492772.md#1">【远见快评】亨特电脑门新一轮风暴 谷歌被起诉</a></li>
-<li><a href="https://github.com/mdeswy3230/djy/blob/master/gb/20/10/22/n12495271.md#1">【新闻看点】拜登中资项目 贺锦丽等大佬卷入</a></li>
-<li><a href="https://github.com/mdeswy3230/djy/blob/master/gb/20/10/23/n12495476.md#1">【珍言真语】袁弓夷：共产害西方 川普抽沼泽</a></li>
-<li><a href="https://github.com/mdeswy3230/djy/blob/master/gb/20/10/21/n12490151.md#1">亨特与未成年女童色情照 朱利安尼已报警</a></li>
-<li><a href="https://github.com/mdeswy3230/djy/blob/master/gb/20/10/21/n12490393.md#1">【十字路口】两岸官场大解析 王岐山告急？</a></li>
-<li><a href="https://github.com/mdeswy3230/djy/blob/master/gb/20/10/21/n12490382.md#1">【远见快评】习近平两因素决定攻台时间表？</a></li>
-<li><a href="https://github.com/mdeswy3230/djy/blob/master/gb/20/10/20/n12490030.md#1">讽中共驻斐济官员无赖 黄秋生帖文获上万按赞</a></li>
-<li><a href="https://github.com/mdeswy3230/djy/blob/master/gb/20/10/21/n12492064.md#1">当年参选港姐拒嫁豪门 佘诗曼吐露真实心声</a></li>
-<li><a href="https://github.com/mdeswy3230/djy/blob/master/gb/20/10/20/n12489836.md#1">裘莉的好莱坞明星老爸挺川普：必须赢得选举</a></li>
-<li><a href="https://github.com/mdeswy3230/djy/blob/master/gb/20/10/21/n12492237.md#1">周星驰否认对赌欠巨债 开启明星发声明新花样</a></li>
-<li><a href="https://github.com/mdeswy3230/djy/blob/master/gb/20/10/20/n12489619.md#1">陈奕迅称很久没收入 自嘲患“荷包干硬化”</a></li>
-<li><a href="https://github.com/mdeswy3230/djy/blob/master/gb/20/10/21/n12491843.md#1">早餐前喝咖啡 血糖影响50% 餐后喝或更好</a></li>
-<li><a href="https://github.com/mdeswy3230/djy/blob/master/gb/20/10/20/n12488542.md#1">六个简单家务清洁习惯 带给你巨大惊喜</a></li>
-<li><a href="https://github.com/mdeswy3230/djy/blob/master/gb/20/10/22/n12493643.md#1">执政时捐9成薪水 “世界最穷总统”退出政坛</a></li>
-<li><a href="https://github.com/mdeswy3230/djy/blob/master/gb/20/10/20/n12489862.md#1">心肌梗塞7大征兆别轻忽！原因、症状和自救方法全图解</a></li>
-<li><a href="https://github.com/mdeswy3230/djy/blob/master/gb/20/10/20/n12489513.md#1">吃饭一定要细嚼慢咽 中医：脾胃最喜欢细碎食物</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/12/16/n13442125.md#1">【百年真相】云南省委书记案 138万人受牵连</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/9/n13632196.md#1">【百年真相】三件大坏事 江泽民最想让人遗忘</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13671140.md#1">【未解之谜】沙中庞贝 楼兰之谜</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/16/n13649079.md#1">【人生之钥】败家子卖田地卖金玉 结局出人意料</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/2/17/n13582749.md#1">【奇术】看风也能预知命运和兴衰成败</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13679009.md#1">【秦鹏直播】为李莹发声险被抓 王圣强：不怕消失</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13679468.md#1">【探索时分】叙利亚雇佣兵能帮上俄罗斯吗？</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13679596.md#1">【远见快评】传普京重大让步 乌克兰中立秘辛</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13675009.md#1">五大战区部署歼-20 中共空军意欲何为</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13669168.md#1">配F-35C等舰载机 美福特号航母已准备好战斗</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674635.md#1">六四领袖被刺杀 FBI盯上中共间谍</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676833.md#1">47岁林志玲产后首晒照 获赞“最美妈咪”</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678198.md#1">威尔史密斯奥斯卡台上打人 摘影帝后致歉落泪</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678918.md#1">大S具俊晔已在台湾完成登记 结婚纪念日选这天</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676987.md#1">威尔?史密斯上台搧颁奖人 杜汶泽一假设引共鸣</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13675982.md#1">《柏捷顿家族：名门韵事》第二季影评：三角恋难题 仍可圆满解决</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13677065.md#1">新筛查方法可查出95%一期胰腺癌</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/25/n13673047.md#1">搭机4点让旅途更安全 资深空姐：选飞机很重要</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/19/n13657423.md#1">吃对了肌肤就漂亮 10大食材为肌肤打底</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674013.md#1">吃奇异果不用削皮 连皮一起吃营养更加倍</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676145.md#1">为什么新衣服在穿着之前要先洗涤？</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/mdeswy3230/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/mdeswy3230/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/10/23/n12497028.htm">联电有望遭美司法部轻判 外资看好</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/10/23/n12497028.htm">联电有望遭美司法部轻判 外资看好</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/mdeswy3230/djy/blob/master/gb/20/10/23/n12497028.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/mdeswy3230/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mdeswy3230/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/mdeswy3230/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/mdeswy3230/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/mdeswy3230/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mdeswy3230/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/mdeswy3230/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mdeswy3230/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/mdeswy3230/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mdeswy3230/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/mdeswy3230/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mdeswy3230/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/mdeswy3230/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mdeswy3230/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/mdeswy3230/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mdeswy3230/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/mdeswy3230/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mdeswy3230/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/mdeswy3230/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mdeswy3230/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/mdeswy3230/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mdeswy3230/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/mdeswy3230/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mdeswy3230/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/mdeswy3230/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mdeswy3230/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/mdeswy3230/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mdeswy3230/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/mdeswy3230/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mdeswy3230/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/mdeswy3230/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mdeswy3230/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/mdeswy3230/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mdeswy3230/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/mdeswy3230/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mdeswy3230/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/mdeswy3230/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mdeswy3230/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/mdeswy3230/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mdeswy3230/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/mdeswy3230/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mdeswy3230/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/mdeswy3230/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mdeswy3230/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/mdeswy3230/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mdeswy3230/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/mdeswy3230/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mdeswy3230/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/eizauy3553/djy/blob/master/gb/20/10/23/n12497028.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
